@@ -42,7 +42,14 @@ AUTH_HEADER_NAME = 'Authorization'
 
 #: A set of session keys that are populated by Flask-Login. Use this set to
 #: purge keys safely and accurately.
-SESSION_KEYS = set(['user_id', 'remember', '_id', '_fresh', 'next'])
+SESSION_KEYS = set([
+    '_user_id',
+    '_remember',
+    '_remember_seconds',
+    '_id',
+    '_fresh',
+    'next',
+])
 
 #: A set of HTTP methods which are exempt from `login_required` and
 #: `fresh_login_required`. By default, this is just ``OPTIONS``.
